WIP: finished queries cache changes
Signed-off-by: Kishore Kumaar Natarajan <kkumaarn@amazon.com>