@@ -9,8 +9,8 @@
 package org.opensearch.plugin.insights.rules.action.live_queries;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.opensearch.common.io.stream.BytesStreamOutput;
@@ -20,74 +20,44 @@ import org.opensearch.common.xcontent.json.JsonXContent;
 import org.opensearch.core.common.io.stream.StreamInput;
 import org.opensearch.core.xcontent.ToXContent;
 import org.opensearch.core.xcontent.XContentBuilder;
-import org.opensearch.plugin.insights.rules.model.Attribute;
-import org.opensearch.plugin.insights.rules.model.Measurement;
-import org.opensearch.plugin.insights.rules.model.MetricType;
-import org.opensearch.plugin.insights.rules.model.SearchQueryRecord;
+import org.opensearch.plugin.insights.rules.model.LiveQueryRecord;
 import org.opensearch.test.OpenSearchTestCase;
 
-/**
- * Unit tests for finished queries functionality in {@link LiveQueriesResponse}.
- */
 public class LiveQueriesResponseFinishedTests extends OpenSearchTestCase {
 
-    private SearchQueryRecord createFinishedQuery(String id, long latency) {
-        Map<MetricType, Measurement> measurements = new HashMap<>();
-        measurements.put(MetricType.LATENCY, new Measurement(latency));
-        measurements.put(MetricType.CPU, new Measurement(randomLongBetween(100, 1000)));
-        measurements.put(MetricType.MEMORY, new Measurement(randomLongBetween(1024, 10240)));
-
-        Map<Attribute, Object> attributes = new HashMap<>();
-        attributes.put(Attribute.SEARCH_TYPE, "query_then_fetch");
-        attributes.put(Attribute.TOTAL_SHARDS, 1);
-
-        return new SearchQueryRecord(System.currentTimeMillis(), measurements, attributes, id);
+    private LiveQueryRecord createRecord(String id, long latency) {
+        return new LiveQueryRecord(id, "completed", System.currentTimeMillis(), null, latency, 200L, 300L, null, new ArrayList<>());
     }
 
     public void testToXContentWithFinishedQueries() throws IOException {
-        // Create live queries
-        SearchQueryRecord liveQuery = createFinishedQuery("live1", 500L);
-        List<SearchQueryRecord> liveQueries = List.of(liveQuery);
-
-        // Create finished queries
-        SearchQueryRecord finishedQuery1 = createFinishedQuery("finished1", 100L);
-        SearchQueryRecord finishedQuery2 = createFinishedQuery("finished2", 200L);
-        List<SearchQueryRecord> finishedQueries = List.of(finishedQuery1, finishedQuery2);
+        List<LiveQueryRecord> liveQueries = List.of(createRecord("live1", 500L));
+        List<LiveQueryRecord> finishedQueries = List.of(createRecord("finished1", 100L), createRecord("finished2", 200L));
 
         LiveQueriesResponse response = new LiveQueriesResponse(liveQueries, finishedQueries, true);
 
         XContentBuilder builder = XContentFactory.jsonBuilder();
         response.toXContent(builder, ToXContent.EMPTY_PARAMS);
         String json = builder.toString();
-
         Map<String, Object> parsed = XContentHelper.convertToMap(JsonXContent.jsonXContent, json, false);
 
-        // Verify live queries section
         assertTrue(parsed.containsKey("live_queries"));
-        @SuppressWarnings("unchecked")
-        List<Map<String, Object>> liveQueriesList = (List<Map<String, Object>>) parsed.get("live_queries");
-        assertEquals(1, liveQueriesList.size());
-        assertEquals("live1", liveQueriesList.get(0).get("id"));
-
-        // Verify finished queries section
         assertTrue(parsed.containsKey("finished_queries"));
         @SuppressWarnings("unchecked")
-        List<Map<String, Object>> finishedQueriesList = (List<Map<String, Object>>) parsed.get("finished_queries");
-        assertEquals(2, finishedQueriesList.size());
-        assertEquals("finished1", finishedQueriesList.get(0).get("id"));
-        assertEquals("finished2", finishedQueriesList.get(1).get("id"));
+        List<Map<String, Object>> liveList = (List<Map<String, Object>>) parsed.get("live_queries");
+        assertEquals(1, liveList.size());
+        assertEquals("live1", liveList.get(0).get("id"));
+        @SuppressWarnings("unchecked")
+        List<Map<String, Object>> finishedList = (List<Map<String, Object>>) parsed.get("finished_queries");
+        assertEquals(2, finishedList.size());
     }
 
     public void testToXContentWithOnlyLiveQueries() throws IOException {
-        SearchQueryRecord liveQuery = createFinishedQuery("live1", 500L);
-        List<SearchQueryRecord> liveQueries = List.of(liveQuery);
-
+        List<LiveQueryRecord> liveQueries = List.of(createRecord("live1", 500L));
         LiveQueriesResponse response = new LiveQueriesResponse(liveQueries);
 
         XContentBuilder builder = XContentFactory.jsonBuilder();
         response.toXContent(builder, ToXContent.EMPTY_PARAMS);
         String json = builder.toString();
-
         Map<String, Object> parsed = XContentHelper.convertToMap(JsonXContent.jsonXContent, json, false);
 
         assertTrue(parsed.containsKey("live_queries"));
@@ -95,56 +65,39 @@ public class LiveQueriesResponseFinishedTests extends OpenSearchTestCase {
     }
 
     public void testToXContentWithEmptyFinishedQueries() throws IOException {
-        SearchQueryRecord liveQuery = createFinishedQuery("live1", 500L);
-        List<SearchQueryRecord> liveQueries = List.of(liveQuery);
-        List<SearchQueryRecord> finishedQueries = Collections.emptyList();
-
-        LiveQueriesResponse response = new LiveQueriesResponse(liveQueries, finishedQueries, true);
+        List<LiveQueryRecord> liveQueries = List.of(createRecord("live1", 500L));
+        LiveQueriesResponse response = new LiveQueriesResponse(liveQueries, Collections.emptyList(), true);
 
         XContentBuilder builder = XContentFactory.jsonBuilder();
         response.toXContent(builder, ToXContent.EMPTY_PARAMS);
         String json = builder.toString();
-
         Map<String, Object> parsed = XContentHelper.convertToMap(JsonXContent.jsonXContent, json, false);
 
-        assertTrue(parsed.containsKey("live_queries"));
         assertTrue(parsed.containsKey("finished_queries"));
         @SuppressWarnings("unchecked")
-        List<Map<String, Object>> finishedQueriesList = (List<Map<String, Object>>) parsed.get("finished_queries");
-        assertTrue(finishedQueriesList.isEmpty());
+        List<?> finishedList = (List<?>) parsed.get("finished_queries");
+        assertTrue(finishedList.isEmpty());
     }
 
     public void testSerializationWithFinishedQueries() throws IOException {
-        List<SearchQueryRecord> liveQueries = List.of(createFinishedQuery("live1", 500L));
-        List<SearchQueryRecord> finishedQueries = List.of(createFinishedQuery("finished1", 100L), createFinishedQuery("finished2", 200L));
+        List<LiveQueryRecord> liveQueries = List.of(createRecord("live1", 500L));
+        List<LiveQueryRecord> finishedQueries = List.of(createRecord("finished1", 100L));
 
-        LiveQueriesResponse originalResponse = new LiveQueriesResponse(liveQueries, finishedQueries, true);
-
+        LiveQueriesResponse original = new LiveQueriesResponse(liveQueries, finishedQueries, true);
         BytesStreamOutput out = new BytesStreamOutput();
-        originalResponse.writeTo(out);
+        original.writeTo(out);
         StreamInput in = StreamInput.wrap(out.bytes().toBytesRef().bytes);
-        LiveQueriesResponse deserializedResponse = new LiveQueriesResponse(in);
+        LiveQueriesResponse deserialized = new LiveQueriesResponse(in);
 
-        assertEquals(originalResponse.getLiveQueries().size(), deserializedResponse.getLiveQueries().size());
-        assertEquals(originalResponse.getLiveQueries(), deserializedResponse.getLiveQueries());
+        assertEquals(original.getLiveQueries().size(), deserialized.getLiveQueries().size());
     }
 
     public void testConstructorWithFinishedQueries() {
-        List<SearchQueryRecord> liveQueries = List.of(createFinishedQuery("live1", 500L));
-        List<SearchQueryRecord> finishedQueries = List.of(createFinishedQuery("finished1", 100L));
+        List<LiveQueryRecord> liveQueries = List.of(createRecord("live1", 500L));
+        List<LiveQueryRecord> finishedQueries = List.of(createRecord("finished1", 100L));
 
         LiveQueriesResponse response = new LiveQueriesResponse(liveQueries, finishedQueries, true);
-
         assertEquals(1, response.getLiveQueries().size());
-        assertEquals("live1", response.getLiveQueries().get(0).getId());
-    }
-
-    public void testConstructorWithoutFinishedQueries() {
-        List<SearchQueryRecord> liveQueries = List.of(createFinishedQuery("live1", 500L));
-
-        LiveQueriesResponse response = new LiveQueriesResponse(liveQueries);
-
-        assertEquals(1, response.getLiveQueries().size());
-        assertEquals("live1", response.getLiveQueries().get(0).getId());
+        assertEquals("live1", response.getLiveQueries().get(0).getQueryId());
     }
 }
